[package]
name = "enigmatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
uuid = "1.10.0"
