[package]
name = "enigmatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.3"
futures-channel = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1.6", features = ["full"] }
log = "0.4.22"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
uuid = "1.10.0"
